--- a/Autentico/Contact/contact.html
+++ b/Autentico/Contact/contact.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-
+	<h3><a href="http://localhost/product_review/Autentico/landing.php">HOME</a></h3>
 	<div class="container-contact100">
 		<!-- <div class="contact100-map" id="google_map" data-map-x="40.722047" data-map-y="-73.986422" data-pin="images/icons/map-marker.png" data-scrollwhell="0" data-draggable="1"></div> -->
 
